--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "axios": "^1.4.0",
     "expo": "~49.0.6",
     "expo-blur": "~12.4.1",
+    "expo-camera": "^13.6.0",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "^14.5.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -40,8 +43,7 @@
     "react-native-stock-star-rating": "^1.0.6",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
-    "yup": "^1.2.0",
-    "expo-linear-gradient": "~12.3.0"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
